fixed playlist stretching

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   width: 200px;
+  height: 280px;
   border-radius: 12px;
   user-select: none;
   cursor: pointer;
@@ -30,6 +31,7 @@
 
 .playlist.vertical {
   width: 150px;
+  height: 230px;
 }
 
 .playlist .button {
